--- a/data/main-window.ui
+++ b/data/main-window.ui
@@ -160,7 +160,7 @@
                                 <property name="use_underline">True</property>
                                 <property name="image">help_menu_about_image</property>
                                 <property name="use_stock">False</property>
-                                <accelerator key="asterisk" signal="activate"/>
+                                <accelerator key="asterisk" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                               </object>
                             </child>
                             <child>
