--- a/data/tweet-view.ui
+++ b/data/tweet-view.ui
@@ -309,7 +309,7 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkButton" id="sexy_dm">
+                      <object class="GtkButton" id="sexy_dm_button">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
