--- a/data/following-viewer.in.ui
+++ b/data/following-viewer.in.ui
@@ -2,53 +2,45 @@
 <interface>
   <!-- interface-requires gtk+ 2.12 -->
   <!-- interface-naming-policy toplevel-contextual -->
-  <object class="GtkListStore" id="friends_manager_liststore">
+  <object class="GtkListStore" id="following_list_store">
     <columns>
       <!-- column-name user_name -->
       <column type="gchararray"/>
       <!-- column-name user_nick -->
       <column type="gchararray"/>
-      <!-- column-name follower -->
-      <column type="gchararray"/>
-      <!-- column-name following -->
-      <column type="gchararray"/>
       <!-- column-name User -->
       <column type="gpointer"/>
     </columns>
   </object>
-  <object class="GtkDialog" id="friends_manager">
-    <property name="width_request">780</property>
-    <property name="height_request">300</property>
+  <object class="GtkDialog" id="following_viewer">
     <property name="visible">True</property>
-    <property name="title" translatable="yes">Friends Manager</property>
-    <property name="default_width">450</property>
-    <property name="default_height">425</property>
-    <property name="destroy_with_parent">True</property>
-    <property name="type_hint">dialog</property>
+    <property name="title" translatable="yes">Who you're following:</property>
+    <property name="default_width">330</property>
+    <property name="default_height">295</property>
+    <property name="type_hint">normal</property>
     <child internal-child="vbox">
-      <object class="GtkVBox" id="dialog-vbox5">
+      <object class="GtkVBox" id="viewer-vbox5">
         <property name="visible">True</property>
         <child>
-          <object class="GtkNotebook" id="friendss_manager_notebook">
+          <object class="GtkNotebook" id="following_notebook">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <child>
-              <object class="GtkVBox" id="vbox_followers">
+              <object class="GtkVBox" id="vbox_following">
                 <property name="visible">True</property>
                 <child>
-                  <object class="GtkScrolledWindow" id="friends_manager_list_scroll">
+                  <object class="GtkScrolledWindow" id="following_list_scroll">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="border_width">6</property>
                     <property name="hscrollbar_policy">never</property>
                     <property name="shadow_type">in</property>
                     <child>
-                      <object class="GtkTreeView" id="friends_and_followers">
+                      <object class="GtkTreeView" id="following_tree_view">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
-                        <property name="model">friends_manager_liststore</property>
+                        <property name="model">following_list_store</property>
                         <property name="search_column">1</property>
-                        <property name="show_expanders">False</property>
                         <child>
                           <object class="GtkTreeViewColumn" id="treeviewcolumn1">
                             <property name="resizable">True</property>
@@ -69,30 +61,6 @@
                               <object class="GtkCellRendererText" id="treeviewcolumn2-renderer1"/>
                               <attributes>
                                 <attribute name="text">1</attribute>
-                              </attributes>
-                            </child>
-                          </object>
-                        </child>
-                        <child>
-                          <object class="GtkTreeViewColumn" id="treeviewcolumn3">
-                            <property name="resizable">True</property>
-                            <property name="title">Am I following them?</property>
-                            <child>
-                              <object class="GtkCellRendererText" id="treeviewcolumn3-renderer1"/>
-                              <attributes>
-                                <attribute name="text">2</attribute>
-                              </attributes>
-                            </child>
-                          </object>
-                        </child>
-                        <child>
-                          <object class="GtkTreeViewColumn" id="treeviewcolumn4">
-                            <property name="resizable">True</property>
-                            <property name="title">Are they following me?</property>
-                            <child>
-                              <object class="GtkCellRendererText" id="treeviewcolumn4-renderer1"/>
-                              <attributes>
-                                <attribute name="text">3</attribute>
                               </attributes>
                             </child>
                           </object>
@@ -123,23 +91,6 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkButton" id="user_follow">
-                        <property name="label" translatable="yes">_Follow</property>
-                        <property name="visible">True</property>
-                        <property name="sensitive">False</property>
-                        <property name="can_focus">True</property>
-                        <property name="receives_default">True</property>
-                        <property name="image">follow_image</property>
-                        <property name="use_underline">True</property>
-                      </object>
-                      <packing>
-                        <property name="expand">False</property>
-                        <property name="fill">False</property>
-                        <property name="padding">5</property>
-                        <property name="position">1</property>
-                      </packing>
-                    </child>
-                    <child>
                       <object class="GtkButton" id="user_unfollow">
                         <property name="label" translatable="yes">_Unfollow</property>
                         <property name="visible">True</property>
@@ -152,16 +103,16 @@
                         <property name="expand">False</property>
                         <property name="fill">False</property>
                         <property name="padding">5</property>
-                        <property name="position">2</property>
+                        <property name="position">1</property>
                       </packing>
                     </child>
                     <child>
                       <object class="GtkButton" id="user_block">
                         <property name="label" translatable="yes">_Block</property>
                         <property name="visible">True</property>
-                        <property name="sensitive">False</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
+                        <property name="tooltip_text" translatable="yes">Block this user from being able to see your tweets or send you messages.</property>
                         <property name="image">block_image</property>
                         <property name="use_underline">True</property>
                       </object>
@@ -169,7 +120,7 @@
                         <property name="expand">False</property>
                         <property name="fill">False</property>
                         <property name="padding">6</property>
-                        <property name="position">3</property>
+                        <property name="position">2</property>
                       </packing>
                     </child>
                     <child>
@@ -206,6 +157,7 @@
                   </object>
                   <packing>
                     <property name="expand">False</property>
+                    <property name="fill">False</property>
                     <property name="padding">4</property>
                     <property name="pack_type">end</property>
                     <property name="position">1</property>
@@ -214,11 +166,11 @@
               </object>
             </child>
             <child type="tab">
-              <object class="GtkLabel" id="label_followers">
+              <object class="GtkLabel" id="label_following">
                 <property name="visible">True</property>
-                <property name="label" translatable="yes">_Manage Friends &amp; Followers</property>
+                <property name="label" translatable="yes">Who you're _following</property>
                 <property name="use_underline">True</property>
-                <property name="mnemonic_widget">friends_and_followers</property>
+                <property name="mnemonic_widget">following_tree_view</property>
               </object>
               <packing>
                 <property name="tab_fill">False</property>
@@ -230,7 +182,7 @@
           </packing>
         </child>
         <child internal-child="action_area">
-          <object class="GtkHButtonBox" id="dialog-action_area5">
+          <object class="GtkHButtonBox" id="viewer-action_area5">
             <property name="visible">True</property>
             <property name="layout_style">end</property>
             <child>
@@ -260,14 +212,8 @@
       <action-widget response="-5">lists_close</action-widget>
     </action-widgets>
   </object>
-  <object class="GtkImage" id="follow_image">
-    <property name="visible">True</property>
-    <property name="stock">gtk-add</property>
-  </object>
-  <object class="GtkImage" id="unfollow_image">
-    <property name="visible">True</property>
-    <property name="stock">gtk-refresh</property>
-  </object>
+  <object class="GtkAction" id="action1"/>
+  <object class="GtkAction" id="action2"/>
   <object class="GtkImage" id="block_image">
     <property name="width_request">24</property>
     <property name="height_request">24</property>
@@ -275,15 +221,15 @@
     <property name="tooltip_text" translatable="yes">Block this user from being able to see your tweets or send you messages.</property>
     <property name="stock">gtk-stop</property>
   </object>
+  <object class="GtkImage" id="unfollow_image">
+    <property name="visible">True</property>
+    <property name="stock">gtk-remove</property>
+  </object>
   <object class="GtkImage" id="view_profile_image">
     <property name="visible">True</property>
     <property name="stock">gtk-info</property>
   </object>
   <object class="GtkImage" id="view_timeline_image">
-    <property name="visible">True</property>
-    <property name="stock">gtk-home</property>
-  </object>
-  <object class="GtkImage" id="view_timeline_image1">
     <property name="visible">True</property>
     <property name="stock">gtk-home</property>
   </object>
