--- a/data/main-window.ui
+++ b/data/main-window.ui
@@ -109,8 +109,8 @@
                                 <property name="use_underline">True</property>
                                 <property name="image">compose_menu_new_dm_image</property>
                                 <property name="use_stock">False</property>
-                                <accelerator key="d" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                                 <accelerator key="Return" signal="activate" modifiers="GDK_SHIFT_MASK"/>
+                                <accelerator key="d" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                               </object>
                             </child>
                           </object>
@@ -271,6 +271,22 @@
                     </child>
                     <child>
                       <object class="GtkSeparatorMenuItem" id="separatormenuitem1">
+                        <property name="visible">True</property>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkImageMenuItem" id="online_service_request_menu_following_viewer">
+                        <property name="label" translatable="yes">Update _Viewer</property>
+                        <property name="visible">True</property>
+                        <property name="tooltip_text" translatable="yes">Select someone you follow &amp; view their updates.</property>
+                        <property name="use_underline">True</property>
+                        <property name="image">friends_menu_update_viewer_image</property>
+                        <property name="use_stock">False</property>
+                        <accelerator key="t" signal="activate" modifiers="GDK_CONTROL_MASK"/>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkSeparatorMenuItem" id="separatormenuitem2">
                         <property name="visible">True</property>
                       </object>
                     </child>
@@ -824,6 +840,10 @@
   <object class="GtkImage" id="friends_menu_friends_manager_image">
     <property name="visible">True</property>
     <property name="stock">gtk-page-setup</property>
+  </object>
+  <object class="GtkImage" id="friends_menu_update_viewer_image">
+    <property name="visible">True</property>
+    <property name="stock">gtk-orientation-portrait</property>
   </object>
   <object class="GtkImage" id="friends_menu_follow_image">
     <property name="visible">True</property>
