--- a/data/friends-manager.in.ui
+++ b/data/friends-manager.in.ui
@@ -21,6 +21,7 @@
     <property name="height_request">300</property>
     <property name="visible">True</property>
     <property name="title" translatable="yes">Friends Manager</property>
+    <property name="window_position">center-on-parent</property>
     <property name="default_width">450</property>
     <property name="default_height">425</property>
     <property name="destroy_with_parent">True</property>
