--- a/data/user-profile-viewer.ui
+++ b/data/user-profile-viewer.ui
@@ -86,8 +86,8 @@
             <property name="layout_style">end</property>
           </object>
           <packing>
-            <property name="expand">False</property>
-            <property name="fill">False</property>
+            <property name="expand">True</property>
+            <property name="fill">True</property>
             <property name="pack_type">end</property>
             <property name="position">0</property>
           </packing>
