get2gnow #00EEEDa04 - Fixed: Friends Manager, Profile Viewer, Update Viewer, and *ta-da!* Direct Messaging drop-down/pop-up.
Several of these fixes have been part of my previous [appended] commits, I've simply been to ill & afraid to write about what I've been working on.  Especially since I knewn something wasn't fixed & that was only leaving me feeling like more of a failure.

Well now they're all fixed, though I still have some shiny & polish I want to add, they are all working correctly now :-) ... sadly I still feel to ill to enjoy having them working again.

Mainly because my friends manager is still being just odd & working sporadically depending on whether its loaded before any thing else, after DMs, after get2gnow's 'Update Viewer', or etc.  My 'Friends Manager' simply renders differently depending on what's loaded when.  Though following a code walk through, using gdb, shows its processing the same data the same way everytime no matter what.  So over all I'm just confused.  I have one more idea on 'fixing' my 'Friends Manager' by stepping back to my previous algorithm.

I just feel its more likely to turn out to be a 'no duh' bug.  At least it will be once I get over my current health crisis.  Which is literally several crisis all at once & they're all to much for me to write about w/o breaking down.  I will say I'm terrified & never felt the full impact of being alone as much as I have lately & do right now.  LOL though I'm sure, now having wrote that, life will once again proof me wrong.

To embody my feelings: "I no longer care about 'what' I'm committing & programming so long as I get to keep doing it."  How long I'll be able to, how long I'll just 'be here' is what has me afraid...my fear is not irrational - it just may turn out to have been seeded by a very narrow minded, sexists, & hate filled Dr.  In short & abs truth: he was & is a prejudice ass hole.  As true as that is when he said something may be killing me - I'm afraid - this time - this ass 

--- a/data/tweet-view.ui
+++ b/data/tweet-view.ui
@@ -427,7 +427,7 @@
                             <child>
                               <object class="GtkCellRendererText" id="friends_cellrenderertext"/>
                               <attributes>
-                                <attribute name="text">0</attribute>
+                                <attribute name="markup">0</attribute>
                               </attributes>
                             </child>
                           </object>
