get2gnow #00EEEDa07
I've done guite a bit more work on get2gnow's new 'best friends' feature.  Along with that I've also improved account setup, & various stablitity tweaks. And an improved build, configure, make, and install process.

I've done a lot of lil stuff & a lot more substantial stuff as well.

I'd kinda like to write about some of it - but I just don't have enough strength.

I'm feeling really really badly right now & I have all day.

I will write about what I'm working on soon enough, especially my game which I have ton a to talk about.

But taking care of 'me 1st' has to come 1st.  My git commit message will have to wait.

I will say ever thing here is all good...given all I have to consider.

Committed on : 2009-08-14 @ 12:52:09 AM

--- a/data/preferences.ui
+++ b/data/preferences.ui
@@ -109,7 +109,7 @@
                             <property name="orientation">vertical</property>
                             <child>
                               <object class="GtkCheckButton" id="titles_only_checkbutton">
-                                <property name="label" translatable="yes">When _titles are found hide its web address/URL.</property>
+				      <property name="label" translatable="yes">Display web page titles instead of _addresses/URLs when possible.</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">False</property>
