--- a/data/tweet-view.ui
+++ b/data/tweet-view.ui
@@ -80,6 +80,18 @@
                     <property name="position">1</property>
                   </packing>
                 </child>
+                <child>
+                  <object class="GtkToggleButton" id="best_friend_toggle_button">
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="receives_default">True</property>
+                    <property name="tooltip_markup">Mark/Unmark this user as a best friend</property>
+                    <property name="image">best_friend_image</property>
+                  </object>
+                  <packing>
+                    <property name="position">2</property>
+                  </packing>
+                </child>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -273,7 +285,6 @@
                         <property name="model">previous_updates_list_store</property>
                         <property name="add_tearoffs">True</property>
                         <property name="tearoff_title">Previous Updates</property>
-                        <property name="text_column">0</property>
                         <child>
                           <object class="GtkCellRendererText" id="previous_update_cell_renderer_text">
                             <property name="xpad">5</property>
@@ -293,8 +304,8 @@
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
                         <property name="tooltip_text" translatable="yes">Update your status/Send your Tweet (&lt;Alt&gt;+S)</property>
-                        <accelerator key="s" signal="clicked" modifiers="GDK_MOD1_MASK"/>
                         <accelerator key="s" signal="clicked" modifiers="GDK_SHIFT_MASK | GDK_MOD1_MASK"/>
+                        <accelerator key="s" signal="clicked" modifiers="GDK_MOD1_MASK"/>
                         <child>
                           <object class="GtkImage" id="sexy_send_image">
                             <property name="visible">True</property>
@@ -314,8 +325,8 @@
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
                         <property name="tooltip_text" translatable="yes">Send your message as a direct message to this user (&lt;Alt&gt;+D).</property>
-                        <accelerator key="d" signal="clicked" modifiers="GDK_MOD1_MASK"/>
                         <accelerator key="d" signal="clicked" modifiers="GDK_SHIFT_MASK | GDK_CONTROL_MASK"/>
+                        <accelerator key="d" signal="clicked" modifiers="GDK_MOD1_MASK"/>
                         <child>
                           <object class="GtkImage" id="sexy_dm_image">
                             <property name="visible">True</property>
@@ -346,8 +357,8 @@
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
                         <property name="tooltip_text" translatable="yes">Clear the selected tweet &amp; start over (&lt;Ctrl&gt;+N).</property>
-                        <accelerator key="n" signal="clicked" modifiers="GDK_CONTROL_MASK"/>
                         <accelerator key="n" signal="clicked" modifiers="GDK_SHIFT_MASK | GDK_CONTROL_MASK"/>
+                        <accelerator key="n" signal="clicked" modifiers="GDK_CONTROL_MASK"/>
                         <child>
                           <object class="GtkImage" id="image1">
                             <property name="visible">True</property>
@@ -367,8 +378,8 @@
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
                         <property name="tooltip_text" translatable="yes">Sends a DM to any of your followers by selecting them from a list, i.e. combo box. (Ctrl+D)</property>
-                        <accelerator key="d" signal="clicked" modifiers="GDK_SHIFT_MASK | GDK_CONTROL_MASK"/>
                         <accelerator key="d" signal="clicked" modifiers="GDK_CONTROL_MASK"/>
+                        <accelerator key="d" signal="clicked" modifiers="GDK_SHIFT_MASK | GDK_CONTROL_MASK"/>
                         <child>
                           <object class="GtkImage" id="dm_form_active_image">
                             <property name="visible">True</property>
@@ -673,12 +684,9 @@
       <!-- column-name IN_REPLY_TO_STATUS_ID -->
       <column type="gdouble"/>
     </columns>
-    <data>
-      <row>
-        <col id="0" translatable="yes">NULL</col>
-        <col id="1"/>
-        <col id="2">0</col>
-      </row>
-    </data>
+  </object>
+  <object class="GtkImage" id="best_friend_image">
+    <property name="visible">True</property>
+    <property name="stock">gnome-stock-about</property>
   </object>
 </interface>
