--- a/data/main-window.in.ui
+++ b/data/main-window.in.ui
@@ -749,6 +749,7 @@
                                 <property name="reorderable">True</property>
                                 <property name="rules_hint">True</property>
                                 <property name="search_column">2</property>
+                                <property name="fixed_height_mode">True</property>
                                 <property name="show_expanders">False</property>
                                 <property name="level_indentation">1</property>
                                 <child>
@@ -1038,7 +1039,7 @@
                     </child>
                   </object>
                   <packing>
-                    <property name="resize">False</property>
+                    <property name="resize">True</property>
                     <property name="shrink">True</property>
                   </packing>
                 </child>
